--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
-/*  your css code here. If applicable */
+.card{
+	width:500px;
+	height:700px;
+	background-color:rgb(255,255,255);
+	padding:50px;
+	border-radius:10px;
+	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.3);
+	box-sizing:border-box;
+	  text-align: center; /* Center-align content horizontally */
+}
+img{
+	width:400px;
+	height:400px;
+	border-radius:10px;
+}
+h1{
+	
+	font-weight:bolder;
+}
+p{
+	
+	font-size:20px;
+}
+button{
+	font-family:poppins;
+	text-align: center;
+	height:50px;
+	width:250px;
+	color:white;
+	border:none;
+	font-size:30px;
+	border-radius:10px;
+	background-color:rgb(239,87,76);
+}
